# hotel-booking-cancellation-prediction

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  _changed_files.txt  _fix_log.txt  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  dvc.yaml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  helm-lint.yml  monitor.yml  security.yml
alembic/: env.py
apps/backend/: main.py  settings.py
apps/frontend/: index.html  package-lock.json  package.json
apps/frontend/reports/: junit.xml
apps/frontend/src/: App.jsx  STYLES.md  modern.css  styles.css
apps/frontend/src/components/: GuestPage.jsx  GuestsPage.jsx
apps/frontend/src/hooks/: useAuth.js  useChat.js  useRuns.js  useSystemStatus.js  useTheme.js
apps/frontend/src/lib/: constants.js
deploy/dev/: prometheus.yml
deploy/dev/grafana/provisioning/dashboards/: dashboards.yml
deploy/gitops/argocd/: production.yaml  project.yaml  staging.yaml
deploy/gitops/flux/: flux-config.yaml
deploy/helm/ds-project/: Chart.yaml  values.yaml
deploy/helm/hotel-booking-cancellation-prediction/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
deploy/helm/hotel-booking-cancellation-prediction/templates/: NOTES.txt  _helpers.tpl  canary.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  pdb.yaml  prometheus-rule.yaml
deploy/k8s/: backup-cronjob.yaml  canary-deployment.yaml  canary-ingress.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secrets.example.yaml
deploy/monitoring/: alertmanager-config.yaml  grafana-dashboard.json  prometheus-rule.yaml
docs/: architecture.md
docs/adr/: 004-helm-gitops-deployment.md  005-distributed-tracing.md  010-versioned-api-v1-v2.md  011-ollama-self-hosted.md  012-postgres-plus-redis.md  013-calibration-sigmoid-isotonic.md  README.md
models/: latest.json
reports/: coverage.xml  feature_spec.json  junit-lifespan.xml  junit.xml
scripts/: check_setup.py  clean_artifacts.py  evaluate_rollback.py  restore_db.sh
src/: api.py  api_lifespan.py  api_shared.py  api_v1.py  api_v2.py  dashboard.py  dashboard_auth.py  dashboard_store.py  data_validation.py  experiment_tracking.py  explain.py  guest_store.py  guests.py  metrics.py  tracing.py  user_store.py  validate.py
src/chat/: memory.py  router.py
src/chat/knowledge/: db_store.py  store.py
src/cli/: train.py
src/validation/: __init__.py  anomaly.py  drift.py  raw_schema.py
tests/: test_api_extended.py  test_api_lifespan.py  test_api_versions.py  test_chat_router.py  test_cli_hpo.py  test_cli_train_extended2.py  test_dashboard.py  test_db_bootstrap.py  test_evaluate_rollback_script.py  test_guests.py  test_knowledge_api.py  test_pipeline_smoke.py  test_split.py
