[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-project"
version = "1.2.0"
description = "Hotel booking cancellation prediction"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
src = ["src"]
target-version = "py310"
