[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-booking-cancellation-prediction"
version = "1.2.0"
description = "Hotel booking cancellation prediction"
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]

[project.optional-dependencies]
pdf = ["pypdf>=5.4.0"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-prod.txt"] }

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.hotel_booking_cancellation_prediction.runtime]
required_python_minor = "3.12"
bootstrap_python = "3.12.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
# Enable stricter checks progressively — set to true when all stubs are added
strict = false
exclude = [
    "alembic/",
    "scripts/",
    "tests/",
    "notebooks/",
]

[[tool.mypy.overrides]]
module = [
    "src.api",
    "src.api_lifespan",
    "src.api_v1",
    "src.api_v2",
    "src.api_shared",
    "src.dashboard_store",
    "src.dashboard_auth",
    "src.rate_limit",
    "src.monitoring",
    "src.policy",
    "src.db_bootstrap",
    "src.metrics",
    "src.cli.train",
    "src.user_store",
    "src.guest_store",
]
disallow_untyped_defs = true
warn_return_any = true

[tool.coverage.run]
source = ["src"]
omit = ["src/__pycache__/*", "src/chat/knowledge/__pycache__/*"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]
